--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,4 +63,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: publish
-          args: --allow-dirty --dry-run --token ${{ secrets.CRATES_TOKEN }}
+          args: --allow-dirty --token ${{ secrets.CRATES_TOKEN }}
